--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,42 +1,45 @@
-<!--index.wxml-->
+<!-- 引入过滤器 -->
+<wxs module="filter" src="../../utils/filters.wxs"></wxs>
 <view class='wraper'>
-  <view class='clubInfo-wraper' style='background-position-y: -50px;'>
+  <view class='clubInfo-wraper'>
+    <image src='{{base_picture_url}}/{{club.image}}' mode='aspectFill'></image>
     <view class='clubInfo'>
       <view class='clubInfo-left'>
-        <image src='{{base_picture_url}}/wangyan1.jpg' class='clubPhoto'></image>
+        <image src='{{base_picture_url}}/{{club.image}}' class='clubPhoto'  
+            mode='aspectFill'></image>
       </view>
       <view class='clubInfo-right'>
-        <view class='clubName'>美力健身天安店</view>
+        <view class='clubName'>{{club.name}}</view>
         <view class='functionButton'>
-          <view class='contactService'>联系客服</view>
-          <view class='addToClub'>申请加入</view>
+          <view class='contactService' bindtap='contactService'>联系客服</view>
+          <view class='addToClub' bindtap='apply'>申请加入</view>
         </view>
       </view>
     </view>
     <view class='clubInfo-bottom'>
-      <view class='clubAddress'>
+      <view class='clubAddress' bindtap='clubLocation'>
         <image src='{{base_picture_url}}/address.png' class='address-icon'></image>
-        <view class='address'>北京市朝阳区朝阳公园十七路</view>
+        <view class='address'>{{filter.overflow_hidden(club.address, 16)}}</view>
       </view>
-      <view class='clubPhone'>
+      <view class='clubPhone' bindtap='call'>
         <image src='{{base_picture_url}}/phone.png'></image>
       </view>
     </view>
   </view>
   <view class='clubFunction'>
-    <view class='signIn'>
+    <view class='signIn' bindtap='signIn'>
       <image src='{{base_picture_url}}/201805030024.png'></image>
       <view>健身打卡</view>
     </view>
-    <view class='clubRemark'>
+    <view class='clubRemark' bindtap='clubRemark'>
       <image src='{{base_picture_url}}/201805030026.png'></image>
       <view>俱乐部介绍</view>
     </view>
-    <view class='memberRanking'>
+    <view class='memberRanking' bindtap='memberRanking'>
       <image src='{{base_picture_url}}/201805030025.png'></image>
       <view>会员排名</view>
     </view>
-    <view class='live'>
+    <view class='live' bindtap='live'>
       <image src='{{base_picture_url}}/201805030027.png'></image>
       <view>健身直播</view>
     </view>
@@ -47,7 +50,8 @@
       先领券后购卡
     </view>
     <view class='ticketBody'>
-      <view class='ticket' wx:for='{{tickets}}' wx:key=''>
+      <view class='ticket' wx:for='{{tickets}}' wx:key='' bindtap='getTicket' 
+          data-index='{{index}}' style='background-color: {{item.background}};'>
         <view class='ticket-left'>
           <view style='text-align:center;'>{{item.price}}元</view>
           <view style='font-size:10px;'>{{item.contant}}</view>
@@ -63,7 +67,7 @@
   <view class='oneCard'>
     <view class='oneCard-title'>健身卡</view>
     <view class='oneCard-list'>
-      <view class='oneCard-body'>
+      <view class='oneCard-body' bindtap='getOneCardDetail'>
         <image src='{{base_picture_url}}/wangyan1.jpg' class='onCard-image' 
           mode='aspectFill'></image>
         <view class='oneCard-contant'>
