--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -14,12 +14,21 @@ page{
 }
 
 .clubInfo-wraper{
-  background: url('https://www.ecartoon.com.cn/picture/wangyan1.jpg') no-repeat;
-  background-size: 100% auto;
+  position: relative;
+  height: 171px;
+}
+
+.clubInfo-wraper > image{
+  width: 100%;
+  height: 100%;
 }
 
 .clubInfo{
-  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 5%;
+  width: 90%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -50,7 +59,7 @@ page{
 
 .contactService, .addToClub{
   float: right; 
-  margin-left: 20px;
+  margin-left: 10px;
   width: 80px;
   height: 20px;
   line-height: 20px;
@@ -60,6 +69,10 @@ page{
 }
 
 .clubInfo-bottom{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.5);
   border-top: 1px solid #FFF;
@@ -130,7 +143,6 @@ page{
   float: left;
   margin: 0 1.5%;
   padding: 10px;
-  background-color: #FF9800;
 }
 
 .ticket-left{
