--- a/pages/courseList/courseList.wxss
+++ b/pages/courseList/courseList.wxss
@@ -32,3 +32,84 @@ page{
 .chooseDate{
   color: green;
 }
+
+.fill{
+    width: 100%;
+    height: 20rpx;
+    background-color: #EFEFF1;
+}
+
+.courseList{
+    width: 100%;
+    height: auto;
+}
+
+.course{
+   width: 100%;
+   height: auto;
+   padding: 20rpx;
+   border-top: 2rpx solid #BABABA;
+   overflow: hidden;
+}
+
+.course:last-child {
+    border-bottom: 2rpx solid #BABABA;
+}
+
+.coursePicDiv{
+  float: left;
+}
+
+
+.coursePic{
+  width: 100%;
+  height: 100%;
+}
+
+.right{
+   float: left;
+   margin-left: 20rpx;
+   overflow: hidden;
+   width: 60%;
+   position: relative;
+}
+
+.courseName{
+    font-size: 28rpx;
+}
+
+.coachName {
+    font-size: 24rpx;
+    color: #999999;
+    margin-top: 10rpx;
+}
+
+.peoples{
+    position:absolute;
+    right: 0;
+    bottom: 16rpx;
+    font-size: 24rpx;
+    color: #999999;
+}
+
+.toBeFull{
+    position: absolute;
+    right: 0;
+    background-color: #FE970F;
+    color: white;
+    font-size: 28rpx;
+    padding: 10rpx 18rpx;
+    border-radius: 10rpx;
+    margin-top:-120rpx;
+}
+
+.full{
+    position: absolute;
+    right: 0;
+    background-color: #E41D23;
+    color: white;
+    font-size: 28rpx;
+    padding: 10rpx 18rpx;
+    border-radius: 10rpx;
+    margin-top:-120rpx;
+}
