--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,4 @@
-/**index.wxss**/
+@import "../../wxParse/wxParse.wxss";
 page{
   width: 100%;
   height: 100%;
@@ -168,10 +168,6 @@ page{
   border-bottom: 1px solid #F0F0F2;
 }
 
-.oneCard-list :last-child{
-  border-bottom: 0;
-}
-
 .onCard-image{
   float: left;
   width: 114px;
@@ -181,4 +177,39 @@ page{
 .oneCard-contant{
   float: right;
   width: 60%;
+}
+
+.onCard-info{
+  margin-top: 5px;
+  height: 25px;
+  overflow: hidden;
+}
+
+.onCard-name{
+  float: left;
+  color: #444;
+}
+
+.sell-out{
+  float: right;
+  margin-top: 2px;
+  padding: 0 5px;
+  color: #FF4401;
+  font-size: 12px;
+  border: 1px solid #FF4401;
+  border-radius: 10px;
+}
+
+.onCard-price{
+  margin-top: 3px;
+  color: #FF4401;
+  font-size: 12px;
+}
+
+.onCard-remark{
+  margin-top: 3px;
+  width: 100%;
+  overflow: hidden;
+  color: #BBB;
+  font-size: 11px;
 }
