--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -68,6 +68,23 @@ page{
   border-radius: 5px;
 }
 
+.contactService{
+  position: relative;
+}
+
+.openButton{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.openButton ::after{
+  border: none;
+}
+
 .clubInfo-bottom{
   position: absolute;
   bottom: 0;
@@ -137,6 +154,17 @@ page{
   border-bottom: 1px solid #F0F0F2;
 }
 
+.no-data-ticket-image{
+  margin: 0 auto;
+  width: 30px;
+  height: 30px;
+}
+
+.no-data-ticket-image > image{
+  width: 100%;
+  height: 100%;
+}
+
 .ticketBody{
   padding: 10px 0;
   overflow: scroll;
@@ -160,6 +188,24 @@ page{
   padding: 10px;
   color: #1E1E1E;
   border-bottom: 1px solid #F0F0F2;
+}
+
+.no-data-image{
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 30px;
+  height: 30px;
+}
+
+.no-data-image > image{
+  width: 100%;
+  height: 100%;
+}
+
+.noDataFont{
+  text-align: center;
+  color: #999;
+  font-size: 12px;
 }
 
 .oneCard-body{
