修改tab图标,活动,活动详情
2018-05-11 14:36

--- a/utils/filters.wxs
+++ b/utils/filters.wxs
@@ -15,6 +15,11 @@ var filters = {
     }
     return text;
   },
+  active_target: function (days, target, value){
+    var company = target == 'A' || target == 'B' ? '公斤' : '次';
+    var targetText = { A: '体重减少', B: '体重增加', C: '健身时间', D: '健身次数'};
+    return days + '天' + targetText[target] + value + company;
+  },
   week_date: function (value) {
       if ( "0" == value ) {
         value = "周一";
@@ -52,12 +57,11 @@ var filters = {
     }
 }
 
-
-
-
+// 暴露接口
 module.exports = {
   toFixed: filters.toFixed,
   overflow_hidden: filters.overflow_hidden,
+  active_target: filters.active_target,
   week_date: filters.week_date,
-  stringNull:filters.stringNull
+  stringNull: filters.stringNull
 }
