--- a/pages/paySuccess/paySuccess.wxss
+++ b/pages/paySuccess/paySuccess.wxss
@@ -1,72 +1,51 @@
-page{
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: #F0F0F2;
+.paySuccess-icon{
+  margin-top: 100px;
+  text-align: center;
 }
 
-.paySuccess-price{
+.paySuccess-icon > image{
+  width: 120px;
+  height: 120px;
+}
+
+.paySuccess-title{
   margin-top: 10px;
-  padding: 20px;
-  background-color: #FFF;
+  text-align: center;
+  font-size: 18px;
+  color: #1e1e1e;
+  font-weight: 400;
 }
 
-.paySuccess-price-image{
-  margin: 0 auto;
-  margin-bottom: 10px;
-  width: 80px;
-  height: 80px;
-}
-
-.paySuccess-price-image > image{
-  width: 100%;
-  height: 100%;
-}
-
-.paySuccess-price-text{
+.paySuccess-content{
+  margin-top: 20px;
   text-align: center;
   font-size: 12px;
-  color: #FE9E3A;
+  color: #999;
 }
 
-.paySuccess-text{
-  margin-top: 10px;
-  padding: 20px;
-  background-color: #FFF;
-}
-
-.paySuccess-text-image{
+.button-tip{
   margin: 0 auto;
-  margin-bottom: 10px;
-  width: 80px;
-  height: 80px;
-}
-
-.paySuccess-text-image > image{
-  width: 100%;
-  height: 100%;
-}
-
-.paySuccess-text-top, .paySuccess-text-bottom{
+  margin-top: 20px;
+  width: 231px;
+  height: 33px;
+  background-color: #FF9800;
   text-align: center;
-  font-size: 12px;
-  color: #B8B8B8;
-}
-
-.paySuccess-text-bottom{
-  margin-top: 5px;
-}
-
-.button{
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
+  line-height: 33px;
   font-size: 14px;
   color: #FFF;
-  background-color: #FF9800;
+  border-radius: 20px;
+}
+
+.paySuccess-message{
+  padding: 10px;
+  text-align: center;
+  font-size: 12px;
+  color: #999;
+}
+
+.paySuccess-hr{
+  margin: 20px auto;
+  width: 80%;
+  height: 1px;
+  background-color: #DCDCDC; 
 }
