--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -115,4 +115,7 @@
       </view>
     </view>
   </view>
+  <button class='login-button' open-type='getUserInfo' bindgetuserinfo='wechatLogin' 
+    wx:if='{{login_button}}'>
+  </button>
 </view>
