--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -259,3 +259,17 @@ page{
   color: #BBB;
   font-size: 11px;
 }
+
+.login-button{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.login-button ::after{
+  border: 0;
+}
