--- a/pages/joinActive/joinActive.wxss
+++ b/pages/joinActive/joinActive.wxss
@@ -49,8 +49,10 @@ page{
 
 .activeStartTime{
   margin-top: 10px;
+  padding: 10px;
   overflow: hidden;
   background-color: #FFF;
+  border-bottom: 1px solid #F0F0F2;
 }
 
 .activeStartTime-left{
@@ -60,5 +62,93 @@ page{
 
 .activeStartTime-right{
   float: right;
-  
+  overflow: hidden;
+}
+
+.currentDate{
+  float: left;
+  margin-right: 5px;
+  height: 20px;
+  line-height: 20px;
+  font-size: 12px;
+  color: #BBB;
+}
+
+.more-icon{
+  float: right;
+  width: 20px;
+  height: 20px;
+}
+
+.currentWeight{
+  padding: 10px;
+  background-color: #FFF;
+  overflow: hidden;
+}
+
+.currentWeight-left{
+  float: left;
+  height: 25px;
+  line-height: 25px;
+  color: #444;
+}
+
+.currentWeight-right{
+  float: right;
+  color: #BBB;
+  overflow: hidden;
+}
+
+.currentWeight-right-input{
+  float: left;
+  margin-right: 5px;
+  width: 40px;
+  height: 19px;
+}
+
+.currentWeight-right-input > input{
+  text-align: right;
+}
+
+.currentWeight-right-text{
+  float: right;
+  height: 25px;
+  line-height: 25px;
+}
+
+.amerceMoney{
+  margin-top: 10px;
+  padding: 10px;
+  overflow: hidden;
+  background-color: #FFF;
+}
+
+.amerceMoney-left{
+  float: left;
+  color: #444;
+}
+
+.amerceMoney-right{
+  float: right;
+  color: #BBB;
+}
+
+.tip{
+  margin-top: 10px;
+  padding: 20px;
+  font-size: 12px;
+  color: #BBB;
+}
+
+.goBuy{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40px;
+  background-color: #FF9800;
+  text-align: center;
+  line-height: 40px;
+  font-size: 14px;
+  color: #FFF;
 }
