--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -24,7 +24,7 @@ page{
 .productName{
   padding: 10px;
   color: #444;
-  border-bottom: 1px solid #BBB;
+  border-bottom: 1px solid #F0F0F2;
 }
 
 .productWellNum{
@@ -32,7 +32,7 @@ page{
   overflow: hidden;
   font-size: 12px;
   color: #BBB;
-  border-bottom: 1px solid #BBB;
+  border-bottom: 1px solid #F0F0F2;
 }
 
 .productWellNum-left{
