修改首页登录和挑战登录
2018-05-11 18:32

--- a/pages/active/active.wxml
+++ b/pages/active/active.wxml
@@ -14,4 +14,7 @@
       </view>
     </view>
   </view>
+  <button class='login-button' open-type='getUserInfo' bindgetuserinfo='wechatLogin' 
+    wx:if='{{login_button}}'>
+  </button>
 </view>
