--- a/pages/active/active.wxss
+++ b/pages/active/active.wxss
@@ -38,3 +38,17 @@
   font-size: 13px;
   text-align: right;
 }
+
+.login-button{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.login-button ::after{
+  border: 0;
+}
