--- a/pages/cash/cash.wxss
+++ b/pages/cash/cash.wxss
@@ -120,8 +120,7 @@ page{
 }
 
 .dou{
-  width: 92%;
-  margin: 0 auto;
+  padding: 0 20rpx;
 }
 
 .cashRemind{
@@ -148,6 +147,7 @@ page{
 .input{
    font-size: 28rpx;
    margin-left: 10rpx;
+   width: 40%;
 }
 
 .cashAll{
@@ -190,4 +190,110 @@ page{
   margin-left: 20rpx;
   margin-top: 2rpx;
 
+}
+
+.hasNoMobilephone{
+  overflow: hidden;
+}
+
+.display{
+  font-size: 28rpx;
+  font-weight: 600;
+  padding: 10rpx 0;
+}
+
+.getMobile{
+   font-size: 28rpx;
+   width: 36%;
+   text-align: center;
+   padding: 10rpx 0;
+   border: 2rpx solid #ff4401;
+   color: #ff4401;
+   border-radius: 10rpx;
+   
+
+}
+
+.getButton{
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.getButton::after{
+  border: 0;
+}
+
+.mobilecode{
+  background-color: white;
+  overflow: hidden;
+  border-top: 4rpx solid #F2F2F2;
+  padding: 16rpx 0;
+}
+
+.codeInput{
+  width: 40%;
+}
+
+.codePlaceholder{
+   font-size: 30rpx;
+}
+
+.getMobilecodeButton{
+  font-size: 28rpx;
+  color: #ff4401;
+  border: 2rpx solid #ff4401;
+  border-radius: 10rpx;
+  padding: 8rpx 10rpx;
+}
+
+.remindCashing{
+  padding: 0 20rpx;
+}
+
+.remindLine{
+  overflow: hidden;
+  padding: 40rpx 0;
+}
+
+.remindPicDiv{
+  width: 9%;
+  height: 70rpx;
+}
+
+.remindPic{
+  width: 100%;
+  height: 100%;
+}
+
+.remindFont{
+  font-size: 28rpx;
+  color: #858585;
+  width: 86%;
+  height: 70rpx;
+  margin:auto 0;
+  margin-left: 20rpx;
+}
+
+.cashButton{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  background-color: #ff4401;
+  color: white;
+  width: 100%;
+  padding: 20rpx 0;
+  text-align: center;
+  font-size: 32rpx;
+  border-radius: 5rpx;
+}
+
+.ddd{
+  height: auto;
+}
+
+.countdown{
+  font-size: 28rpx;
+  color: #858585;
+  border: 2rpx solid #858585;
+  border-radius: 10rpx;
+  padding: 8rpx 10rpx;
 }
