--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -28,7 +28,7 @@
       </view>
 
       <!-- 我的钱包 -->
-      <view class="pre">
+      <view class="pre" bindtap="gotoMyWallet">
             <view class="title">我的钱包</view>
             <view class="link">></view>
       </view>
