--- a/pages/joinActive/joinActive.wxss
+++ b/pages/joinActive/joinActive.wxss
@@ -88,8 +88,8 @@ page{
 
 .currentWeight-left{
   float: left;
-  height: 25px;
-  line-height: 25px;
+  height: 1.4rem;
+  line-height: 1.4rem;
   color: #444;
 }
 
@@ -103,7 +103,6 @@ page{
   float: left;
   margin-right: 5px;
   width: 40px;
-  height: 19px;
 }
 
 .currentWeight-right-input > input{
@@ -112,8 +111,8 @@ page{
 
 .currentWeight-right-text{
   float: right;
-  height: 25px;
-  line-height: 25px;
+  height: 1.4rem;
+  line-height: 1.4rem;
 }
 
 .amerceMoney{
