--- a/pages/ticket/ticket.wxml
+++ b/pages/ticket/ticket.wxml
@@ -16,7 +16,7 @@
   </view>
 
  <!-- 激活优惠券按钮 -->
- <view class="activeTicket-div" bindtap="activeTicket" wx:if='{{need}}'>
+ <view class="activeTicket-div" bindtap="activeTicket" wx:if='{{activeTicket}}'>
      <view class="activeTicket" >激活</view>
  </view>
 </view>
